Bug 1361475 - Remove proprietary constructor on AudioContext. r=baku

This was used only for B2G, was proprietary, and is causing issues, because
`AudioContext` can now have a parameter that is a property bag, per spec
(although we haven't implemented it at the moment).

MozReview-Commit-ID: 6LOlNp0cbfV

--HG--
extra : rebase_source : 48aa342213dba201c1062a08c7453acd16b8baea